buildscript {
	ext {
		springBootVersion = '2.0.6.RELEASE'
		mapstructVersion = "1.3.0.Beta1"
		lombokVersion = "1.18.0"
	}
	repositories {
		mavenCentral()
	}
	dependencies {
		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
	}
}

apply plugin: 'java'
apply plugin: 'idea'
apply plugin: 'eclipse'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'

group = 'com.springboot.beispiele'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = 1.8

repositories {
	mavenCentral()
}

configurations {
	querydslapt
}

task generateQueryDSL(type: JavaCompile, group: 'build', description: 'Generates the QueryDSL query types') {
    source = sourceSets.main.java
    classpath = configurations.compile + configurations.querydslapt
    options.compilerArgs = [
            "-proc:only",
            "-processor", "com.querydsl.apt.jpa.JPAAnnotationProcessor"
    ]
    destinationDir = sourceSets.main.java.srcDirs.iterator().next()
}

compileJava {
    dependsOn generateQueryDSL
    source generateQueryDSL.destinationDir
}

dependencies {
	compile('org.springframework.boot:spring-boot-starter-data-jpa')
	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
	compile('org.springframework.boot:spring-boot-starter-web')

	compile('org.springframework.boot:spring-boot-devtools')
	runtime 'com.h2database:h2:1.4.197'


	testCompile('org.springframework.boot:spring-boot-starter-test')

	testCompile 'org.junit.jupiter:junit-jupiter-api:5.1.0'
	testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.1.0'
	testCompile 'org.junit.platform:junit-platform-runner:1.3.0-M1'
	testRuntime("org.junit.vintage:junit-vintage-engine:5.2.0")
	testCompile 'org.junit.platform:junit-platform-launcher:1.3.0-M1'

	testCompile 'org.hamcrest:hamcrest-core:1.3'
	testCompile 'org.mockito:mockito-core'


	implementation "com.querydsl:querydsl-root:4.1.3"
	compile("com.querydsl:querydsl-jpa:4.1.3")
	compile("com.querydsl:querydsl-apt:4.1.3:jpa")

	annotationProcessor  "org.projectlombok:lombok:${lombokVersion}"
	compile("org.projectlombok:lombok:${lombokVersion}")

	compile("org.springframework.boot:spring-boot-starter-thymeleaf")
}
